Se agrega notificación de correo con plantilla y los servicio para procesar al mismo tiempo la respuesta y aprobación de planta, calidad y mantenimiento.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,6 +34,11 @@ server.port=8440
 #spring.mail.properties.mail.smtp.timeout=5000
 #spring.mail.properties.mail.smtp.writetimeout=5000
 
+#Configuracion Notificacion
+spring.thymeleaf.cache = false
+notificacion.imagenLogo = ${NOTIFICACION_IMAGEN_LOGO}
+notificacion.urlBase = ${NOTIFICACION_URL_BASE}
+
 #Configuraciones Correo
 spring.mail.host=${MAIL_HOST}
 spring.mail.port=${MAIL_PORT}
