--- a/pom.xml
+++ b/pom.xml
@@ -224,6 +224,11 @@
 			<version>1.18.22</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>2.3.6</version>
+		</dependency>
 	</dependencies>
 
 	<build>
